--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 <body>
-    
+    <nav class="nav">
+        <ul>
+            <li>
+                <a href="#my-information">About the Developer</a>
+            </li>
+            <li>
+                <a href="#developers-work">My Developer Work</a>
+            </li>
+            <li>
+                <a href="#contact-information">Contact Me</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
