--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
 </head>
 <body>
+    
+<!-- Header and Nav Bar for clickable links in top of screen  -->
+<header>
+    <h1><span class="Broadt">BrielleBroadt</span></h1>
     <nav class="nav">
         <ul>
             <li>
@@ -20,5 +24,30 @@
             </li>
         </ul>
     </nav>
+</header>
+<!-- Section with picture and subtitle at the top of page -->
+<section class="Background">
+<h2 class="Wed Developer"> New Full Stack Web Developer  </h2>
+</section>
+<!--About me paragraph  -->
+<p><h3>About Me</h3>
+New Full Stack Web Developer looking to display projects and challanges learned in Rutegers Bootcamp. Experianced with HTML, CSS and JavaScript. Experiance with 
+bais trouble shooting IT issues as well as creating forms in EMR systems. Develper is currently  working in the substance abuse field with 7 years of experiance. Current position
+is Director of Operations. Developer obtained AS of Science in December of 2022 through RCBC and is currenty working towards a BA of communications projected graduation 2025. 
+Developer also has 200 hour RYT and other numerous yoga trainings which is what is enjoyable in free time. Developer plans to get a Masters in Artificial Inteligence. Developer is
+seeking to switch fields into the tech world as coding and computers is the true passion. 
+</p>
+<!-- Section for projects and other items -->
+<section>
+<h4>Refactor challange</h4>
+<h4>Portfolio challange</h4>
+<h4>Challange 3</h4>
+<h4>Challange 4</h4>
+<h4>Challange 5</h4>
+</section>
 </body>
+<footer>
+    Contact me 609-257-8287 brielleb.broadt@gmail.com Github Lindkin
+
+
 </html>
