--- a/index.html
+++ b/index.html
@@ -56,15 +56,20 @@
     </section>
     <section class="row">
         <h4>Portfolio challange</h4>
+        <a href="https://github.com/BrielleBroadt/Portfolio-Challange">PortfolioChallange</a>
     </section>
     <section class="row">
-        <h4>Challange 3</h4>
+        <h4>Note-Taker</h4>
+        <a href="https://github.com/BrielleBroadt/Note-taker">NoteTaker</a>
     </section>
     <section class="row">
-        <h4>Challange 4</h4>
+        <h4>Project 1</h4>
+        <a href="https://github.com/BrielleBroadt/Witty-Web-Wizard">Witty WebWizard</a>
     </section>
     <section class="row">
-        <h4>Challange 5</h4>
+        <h4>Project 2</h4>
+        <a href="https://github.com/BrielleBroadt/404-Group-Not-Found">Renew You Repo</a>
+        <a href="https://secret-anchorage-27048-6f96f7f70d0e.herokuapp.com/">Heroku Deployment</a>
     </section>
 </main>
 <!-- Contact information in footer -->
